changed the contact pages "Send Me Message" error

--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
                     </div>
             </nav>
             
-            <h1 class="display-2"><ins>Send Me Message</ins></h1><hr>
+            <h1 class="display-2"><ins>Send Me A Message</ins></h1><hr>
 
             <form>
                 <div class="row">
